--- a/app/src/main/res/layout/online_library_fragment.xml
+++ b/app/src/main/res/layout/online_library_fragment.xml
@@ -39,12 +39,13 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/btnTest"
                 android:layout_width="70dp"
                 android:layout_height="50dp"
+                android:background="@color/colorPrimary"
                 android:text="MORE"
                 android:textColor="#fff"
-                android:textStyle="bold"
-                android:background="@color/colorPrimary" />
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
