--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -6,23 +6,22 @@
 
     <ImageView
         android:id="@+id/imgGrid"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:background="@drawable/anh"
-        android:gravity="center" />
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/txtAlbums"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:fontFamily="serif-monospace"
         android:gravity="center"
-        android:paddingBottom="20dp"
         android:text="Rock"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#000"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textStyle="bold|italic" />
 
 </LinearLayout>
