--- a/app/src/main/res/layout/list_single.xml
+++ b/app/src/main/res/layout/list_single.xml
@@ -2,30 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="100dp"
+    android:orientation="horizontal"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp">
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp" />
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="4"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp">
 
         <TextView
             android:id="@+id/txtTitle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:layout_height="0dp"
+            android:layout_weight="4"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="Text Test" />
@@ -33,22 +34,16 @@
         <TextView
             android:id="@+id/txtDuration"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
+            android:layout_height="0dp"
+            android:layout_weight="2"
             android:textSize="13sp"
             tools:text="Text Test" />
 
         <TextView
             android:id="@+id/txtArtists"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
-            android:paddingLeft="10dp"
+            android:layout_height="0dp"
+            android:layout_weight="2"
             android:textSize="14sp"
             tools:text="Text Test" />
     </LinearLayout>
