--- a/app/src/main/res/layout/now_play.xml
+++ b/app/src/main/res/layout/now_play.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
 
     <LinearLayout
-        android:background="@color/colorPrimary"
+        android:background="@color/White"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical">
 
         <ListView
             android:id="@+id/listNowPlay"
             android:layout_width="match_parent"
-            android:layout_height="900dp"
-            android:layout_weight="1" />
+            android:layout_height="0dp"
+            android:layout_weight="10" />
 
         <RelativeLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:layout_weight="3"
             android:background="#C55901">
 
             <Button
