--- a/app/src/main/res/layout/tab__albums.xml
+++ b/app/src/main/res/layout/tab__albums.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:columnWidth="160dp"
-        android:numColumns="auto_fit" />
+        android:numColumns="2"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp" />
 
 </LinearLayout>
