--- a/app/src/main/res/layout/youtube_test.xml
+++ b/app/src/main/res/layout/youtube_test.xml
@@ -17,6 +17,6 @@
         android:layout_width="101dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Button" />
+        android:text="Play" />
 
 </LinearLayout>
