--- a/app/src/main/res/layout/youtube_test.xml
+++ b/app/src/main/res/layout/youtube_test.xml
@@ -9,14 +9,20 @@
         class="com.google.android.youtube.player.YouTubePlayerView"
         id="@+id/view"
         layout_weight="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <Button
-        android:id="@+id/btnPlay"
-        android:layout_width="101dp"
-        android:layout_height="wrap_content"
+    <ListView
+        android:id="@+id/listVideos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_weight="1"
-        android:text="Play" />
+        android:dividerHeight="@dimen/mp.divider.line"
+        android:scrollbars="horizontal">
+
+    </ListView>
 
 </LinearLayout>
