Them lich su tim kiem cua nguoi dung. Sua lai icon cua app.

--- a/app/src/main/res/layout/tab_songs.xml
+++ b/app/src/main/res/layout/tab_songs.xml
@@ -26,7 +26,8 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingTop="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#DADADA">
 
         <ImageView
             android:id="@+id/imgNowPlaybtm"
