Them lich su tim kiem cua nguoi dung. Sua lai icon cua app.

--- a/app/src/main/res/layout/list_single.xml
+++ b/app/src/main/res/layout/list_single.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="110dp"
     android:orientation="horizontal"
     android:paddingBottom="5dp"
     android:paddingTop="5dp">
@@ -10,22 +10,22 @@
     <ImageView
         android:id="@+id/img"
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent" />
+        android:layout_height="100dp"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="4"
         android:layout_height="match_parent"
+        android:layout_weight="4"
         android:orientation="vertical"
+        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp">
+        android:paddingTop="5dp">
 
         <TextView
             android:id="@+id/txtTitle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="4"
             android:textSize="16sp"
             android:textStyle="bold"
