--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,8 +25,8 @@
                 android:id="@+id/help"
                 android:title="Help" />
             <item
-                android:id="@+id/send_feedback"
-                android:title="Send Feedback" />
+                android:id="@+id/login"
+                android:title="Login" />
         </menu>
     </item>
 
